<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ClickTestActivity">

    <Button
        android:id="@+id/btn_test_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="测试Button点击" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Spinner
        android:id="@+id/spinner_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/languages" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <CheckBox
        android:id="@+id/check_box_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Android" />

    <CheckBox
        android:id="@+id/check_box_ios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="iOS" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="female" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/tv_click_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="placeholder" />

    <EditText
        android:id="@+id/test_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="输入框"/>

</LinearLayout>