<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DialogTestActivity">

    <Button
        android:id="@+id/btn_show_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="显示AlertDialog" />

    <Button
        android:id="@+id/btn_show_no_title_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="显示无标题AlertDialog" />

    <Button
        android:id="@+id/btn_show_list_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="显示列表AlertDialog" />

    <Button
        android:id="@+id/btn_show_popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="显示PopupWindow" />

    <Button
        android:id="@+id/btn_show_popup_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="显示PopupMenu" />

    <Button
        android:id="@+id/btn_show_activity_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="显示Activity Dialog" />

    <ImageView
        android:id="@+id/screenshot"
        android:layout_width="match_parent"
        android:background="@color/growing_tracker_orange"
        android:layout_height="match_parent"/>

</LinearLayout>